<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_line"
        tools:context=".main.ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:text="@string/register"
                android:layout_marginTop="@dimen/_20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/registerCard"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/registerCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:elevation="4dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_percent="0.9">

                        <TextView
                            android:id="@+id/nameLabel"
                            style="@style/commonText18"
                            android:text="@string/name_"
                            android:gravity="start"
                            android:layout_marginTop="@dimen/_20dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="@dimen/_0dp"
                            style="@style/commonFieldRounded"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/nameLabel"/>

                        <TextView
                            android:id="@+id/lastNameLabel"
                            style="@style/commonText18"
                            android:layout_marginTop="@dimen/_10dp"
                            android:text="@string/lastName1_"
                            android:gravity="start"
                            app:layout_constraintTop_toBottomOf="@id/name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <EditText
                            android:id="@+id/lastName1"
                            android:layout_width="@dimen/_0dp"
                            style="@style/commonFieldRounded"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/lastNameLabel"/>

                        <TextView
                            android:id="@+id/lastNameLabel2"
                            style="@style/commonText18"
                            android:layout_marginTop="@dimen/_10dp"
                            android:text="@string/lastName2_"
                            android:gravity="start"
                            app:layout_constraintTop_toBottomOf="@id/lastName1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <EditText
                            android:id="@+id/lastName2"
                            android:layout_width="@dimen/_0dp"
                            style="@style/commonFieldRounded"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/lastNameLabel2"/>

                        <TextView
                            android:id="@+id/birthDateLabel"
                            style="@style/commonText18"
                            android:layout_marginTop="@dimen/_10dp"
                            android:text="@string/birthDay_"
                            android:gravity="start"
                            app:layout_constraintTop_toBottomOf="@id/lastName2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                        <DatePicker
                            android:id="@+id/datePicker1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:datePickerMode="spinner"
                            android:maxDate="01/01/2020"
                            app:layout_constraintTop_toBottomOf="@id/birthDateLabel"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:calendarViewShown="false"/>

                        <TextView
                            android:id="@+id/countryLabel"
                            style="@style/commonText18"
                            android:text="@string/country_"
                            android:gravity="start"
                            app:layout_constraintTop_toBottomOf="@id/datePicker1"
                            android:layout_marginTop="@dimen/_10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>

                        <Spinner
                            android:id="@+id/country"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/countryLabel"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_0dp"
                android:backgroundTint="@color/red"
                android:text="@string/register"
                android:textSize="@dimen/_18sp"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_percent="0.9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/registerCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>